--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <a href="https://github.com/IvanBagrin/ivanBagrin.github.io" class="list-group-item list-group-item-action active">
                     Багрин Иван Васильевич</br>
                     ray-q@mail.ru</br>
+                    GitHub
 
                     
                 </a>
