--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     GitHub
                 </a>
                 <a href="http://e90573q9.beget.tech/webbooster/" class="list-group-item list-group-item-action">Webbooster</a>
-                <a href="https://ivanbagrin.github.io/PulseSite/src/" class="list-group-item list-group-item-action">PulseSite</a>
+                <a href="http://e90573q9.beget.tech/Pulse/" class="list-group-item list-group-item-action">PulseSite</a>
                 <a href="https://ivanbagrin.github.io/UberSite/src/" class="list-group-item list-group-item-action">UberSite</a>
                 <a href="https://ivanbagrin.github.io/my-site/" class="list-group-item list-group-item-action">SiteWP</a>
               
